update java version to 17